# softadastra

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmd.md  vix.json
.github/workflows/: ci-strict.yml  ci.yml  release.yml  sdk-release.yml
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
apps/cli/commands/node/: NodeCommand.cpp  NodeCommand.hpp  NodeInfoCommand.cpp  NodeInfoCommand.hpp  NodeStartCommand.cpp  NodeStartCommand.hpp
apps/cli/commands/peers/: PeersCommand.cpp  PeersCommand.hpp
apps/cli/commands/status/: StatusCommand.cpp  StatusCommand.hpp
apps/cli/commands/store/: StoreCommand.cpp  StoreCommand.hpp  StoreGetCommand.cpp  StoreGetCommand.hpp  StorePutCommand.cpp  StorePutCommand.hpp
apps/cli/commands/sync/: SyncCommand.cpp  SyncCommand.hpp  SyncStatusCommand.cpp  SyncStatusCommand.hpp  SyncTickCommand.cpp  SyncTickCommand.hpp
apps/cli/runtime/: SoftadastraRuntime.cpp  SoftadastraRuntime.hpp
apps/node/: CMakeLists.txt  SoftadastraNode.cpp  SoftadastraNode.hpp  main.cpp
cmake/: softadastraConfig.cmake.in
config/: modules.php
core/Support/: Helpers.php
docs/ecosystem/: repositories.md
docs/foundation/: invariants.md
docs/governance/: repository-layout.md  versioning.md
examples/: CMakeLists.txt  local_recovery.cpp
examples/cli/: CMakeLists.txt  cli_arg_parser.cpp  cli_commands_demo.cpp  cli_custom_command.cpp  cli_minimal.cpp  cli_registry.cpp  cli_service_single.cpp  cli_table_formatter.cpp  cli_tokenizer.cpp  cli_ui_style.cpp
examples/core/: CMakeLists.txt  error_result_example.cpp  ids_example.cpp  time_example.cpp
examples/discovery/: CMakeLists.txt  discovery_announcer.cpp  discovery_codec.cpp  discovery_engine_setup.cpp  discovery_listener.cpp  discovery_minimal.cpp  discovery_registry.cpp  discovery_roundtrip_demo.cpp  discovery_service.cpp
examples/fs/: CMakeLists.txt  diff.cpp  scan.cpp  snapshot.cpp  watch.cpp
examples/metadata/: CMakeLists.txt  metadata_capabilities.cpp  metadata_custom_provider.cpp  metadata_encode_decode_demo.cpp  metadata_local_snapshot.cpp  metadata_minimal.cpp  metadata_registry_demo.cpp  metadata_registry_filter.cpp  metadata_service_demo.cpp
examples/store/: CMakeLists.txt  basic_store.cpp  memory_only.cpp  operation_codec.cpp  recovery_demo.cpp  snapshot_from_wal.cpp  wal_usage.cpp
examples/sync/: CMakeLists.txt  ack_tracker.cpp  basic_sync.cpp  conflict_policy.cpp  manual_queue.cpp  remote_apply.cpp  retry.cpp  scheduler_tick.cpp
examples/transport/: CMakeLists.txt  basic_client.cpp  basic_server.cpp  dispatcher_ping.cpp  drive_end_to_end_demo_client.cpp  drive_end_to_end_demo_server.cpp  full_sync_demo_client.cpp  full_sync_demo_server.cpp  peer_registry.cpp  sync_bridge.cpp
examples/wal/: CMakeLists.txt  wal_event.cpp  wal_read.cpp  wal_replay_to_store.cpp  wal_stream.cpp  wal_write.cpp
include/softadastra/drive/app/: App.hpp
keys/: softadastra-minisign.pub
modules/Auth/Core/Helpers/: AuthRedirect.php
modules/Auth/Core/Http/Controllers/: AuthController.php
modules/Blog/Core/: Module.php
modules/Blog/Core/Config/: blog.php
modules/Blog/Core/Database/Migrations/: 20251124114706_create_blog_table.sql
modules/Blog/Core/Database/Seeders/: BlogSeeder.php
modules/Blog/Core/Http/Controllers/: HomeController.php
modules/Blog/Core/Public/assets/css/: style.css
modules/Blog/Core/Public/assets/js/: script.js
modules/Blog/Core/Services/: BlogService.php
modules/Blog/Core/routes/: web.php
modules/Blog/Core/views/: home.php
modules/Map/Core/: Module.php
modules/Map/Core/Config/: map.php
modules/Map/Core/Database/Migrations/: 20251124114730_create_map_table.sql
modules/Map/Core/Database/Seeders/: MapSeeder.php
modules/Map/Core/Http/Controllers/: HomeController.php
modules/Map/Core/Public/assets/css/: style.css
modules/Map/Core/Public/assets/js/: script.js
modules/Map/Core/Services/: MapService.php
modules/Map/Core/routes/: web.php
modules/Map/Core/views/: home.php
modules/User/Core/: Module.php
modules/User/Core/Http/Controllers/: HomeController.php  UserApiController.php
modules/User/Core/Public/assets/css/: style.css
modules/User/Core/Public/assets/js/: pageUserHome.js
modules/User/Core/routes/: web.php
modules/User/Core/views/: home.php
public/assets/js/: pageUserHome.js  spa.js
src/: main.cpp
src/Controllers/: Controller.php
src/app/: App.cpp
tests/: AuthServiceTests.cpp  CMakeLists.txt
views/: base.php
views/partials/: header.php
